--- a/web/modules/my_d8_demo/my_d8_demo.services.yml
+++ b/web/modules/my_d8_demo/my_d8_demo.services.yml
@@ -4,3 +4,7 @@ services:
     arguments: ['@current_user']
     tags:
       - {"name": "access_check", applies_to: '_node_creator_check' }
+      
+  my_d8_demo.dbwrapper:
+    class: Drupal\my_d8_demo\DbWrapper
+    arguments: ['@database']
